2001-03-07  Adam Fedor  <fedor@gnu.org>

	* GNUstep.sh.in: Switch PATH back to the way it was so GNUstep
	paths are first.

2001-03-06  Adam Fedor  <fedor@gnu.org>

	* GNUmakefile.in: Remove extra '/' from GNUSTEP_..._ROOT paths.

2001-03-01 Richard Frith-Macdonald <rfm@gnu.org>

	* GNUstep.sh.in: Added check to ensure we don't add the same info
	to the path twice.

2001-02-28  Adam Fedor  <fedor@gnu.org>

	* rules.make (LIBRARIES_DEPEND_UPON): Use ALL_LIB_DIRS not 
	LIB_DIRS_NO_SYSTEM.
	* Documentation/README.NetBSD: New file.

2001-02-27  Adam Fedor  <fedor@gnu.org>

	* rules.make (LIBRARIES_DEPEND_UPON): Switch order of -L flags so
	additional flags are first.
	* target.make (SHARED_LIB_LINK_CMD): Remove redundant -L flags.

Tue Feb 27 04:45:42 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.in (Version): source it as ./Version rather than just
	Version (suggested by Juliusz Chroboczek <jch@pps.jussieu.fr>).
	* configure: Regenerated.
	
2001-02-26  Adam Fedor  <fedor@gnu.org>

	* Documenation/makedoc.make: New file mostly copied from
	documenation.make. 
	* Documenation/makerules.make: New mostly copied from rules.make
	* Documenation/gnustep-howto.texi: Moved from core/Documenation
	* Documenation/faq.texi: Likewise.
	* Documenation/machines.texi: Likewise.
	* GNUstep-HOWTO, FAQ: Regenerated.
	* README.MinGW: Moved from core

2001-02-25  Adam Fedor  <fedor@gnu.org>

	* configure.in: Separate def of LD_LIBRARY_PATH from export.

2001-02-24  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.in (GNUSTEP_NETWORK_ROOT): Fixed typo.
	* configure: Regenerated.
	
2001-02-22  Adam Fedor  <fedor@gnu.org>

	* which_lib.c (main): Add back the -L paths.

2001-02-23  Nicola Pero  <n.pero@mi.flashnet.it>

	* opentool.in: If a local tool is found, do not search further in
	other directories.

2001-02-21  Adam Fedor  <fedor@gnu.org>

	* Documentation/make.texi: Update
	* Documentation/news.texi: Likewise
	* Documentation/install.texi: Likewise